--- a/MainStoryBoard.storyboard
+++ b/MainStoryBoard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E49a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gMW-TV-RFh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G12a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gMW-TV-RFh">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LV5-tv-6gF">
-                                <rect key="frame" x="20" y="120" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <rect key="frame" x="20" y="210" width="280" height="40"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="33"/>
                                 <state key="normal" title="Play">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -27,8 +27,8 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hj4-lp-bIx">
-                                <rect key="frame" x="20" y="160" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <rect key="frame" x="20" y="260" width="280" height="40"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="33"/>
                                 <state key="normal" title="Stars">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -37,23 +37,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfw-KK-aIU">
-                                <rect key="frame" x="20" y="200" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <rect key="frame" x="20" y="309" width="280" height="40"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="33"/>
                                 <state key="normal" title="Help">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="helpButton:" destination="gMW-TV-RFh" eventType="touchUpInside" id="rYM-IP-2p4"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhd-WK-IBp">
-                                <rect key="frame" x="20" y="317" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <state key="normal" title="Settings">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="settingsButton:" destination="gMW-TV-RFh" eventType="touchUpInside" id="3RZ-Nq-VE1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -156,6 +146,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39j-Ib-4F0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="579" y="-190"/>
+        </scene>
+        <!--Help View Controller-->
+        <scene sceneID="5Qu-E9-2fP">
+            <objects>
+                <viewController storyboardIdentifier="helpVCStoryBoard" id="n5A-gJ-V1c" customClass="HelpViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iOV-1q-hBu"/>
+                        <viewControllerLayoutGuide type="bottom" id="9ui-cw-VrE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ka9-Pa-DBR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HZS-L6-9pL">
+                                <rect key="frame" x="0.0" y="20" width="320" height="402"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">New game has seven level with five questions in each level and the player should answer all five questions correctly in one go or the player needs repeat the same level again.Each question the player answers correctly player gets a gold star once the player gets five stars he/she completes the level and can go to the next level.Once the player collects all five stars and completes the level player gets a surprise gift at the end of each level.Correct answer is denoted by a green and the wrong answer is denoted by red, once the player finishes all the seven levels player completes the game.Helpful links for the questions the player can answer by getting some general knowledge:Product by Shiva.http://thealamo.org/history/the-1836-battle/index.htmlhttp://www.softschools.com/facts/us_national_landmarks/the_alamo_facts/492/http://www.uiw.edu/sanantonio/jenningsnaming.htmlhttp://www.toweroftheamericas.com/http://www.alamodome.com/http://www.50states.com/texas.htm#.Vjk8i_mrS00http://www.50states.com/bio/nickname1.htm#.VjlA0_mrS00https://www.world-airport-codes.com/united-states/austin-bergstrom-international-11404.htmlhttps://www.tsl.texas.gov/ref/abouttx/sixflags.htmlhttp://www.go4quiz.com/13/usa-america-quiz-questions-answers-trivia-facts/http://www.go4quiz.com/13/usa-america-quiz-questions-answers-trivia-facts/http://www.proprofs.com/quiz-school/story.php?title=north-american-geographyhttp://www.helloquizzy.com/quizzy/take</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLN-4a-0QJ">
+                                <rect key="frame" x="143" y="430" width="34" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="helpBackButtonPressed:" destination="n5A-gJ-V1c" eventType="touchUpInside" id="8aR-f4-d68"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r5Y-5a-YAa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="579" y="366"/>
         </scene>
         <!--Quiz View Controller-->
         <scene sceneID="jbC-Rm-Hrr">
